--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "third_party/cpp-jwt"]
 	path = third_party/cpp-jwt
 	url = git@github.com:arun11299/cpp-jwt.git
+[submodule "third_party/mongo-cxx-driver"]
+	path = third_party/mongo-cxx-driver
+	url = git@github.com:mongodb/mongo-cxx-driver.git
+[submodule "third_party/mongo-c-driver"]
+	path = third_party/mongo-c-driver
+	url = git@github.com:mongodb/mongo-c-driver.git
