--- a/services/config/CMakeLists.txt
+++ b/services/config/CMakeLists.txt
@@ -5,4 +5,7 @@ add_microservice(
         src/main.cc
     PROTO
         config.proto
+        config.service_config.proto
 )
+
+target_link_libraries(ganymede.services.config PUBLIC mongo::mongocxx_shared)
