Implemented Create/Get Config for ConfigService
+ Added partial BSON-Protobuf SerDe. Only supports the types I use so
  far as a proof-of-concept. Adding all possible types is a relatively
  straight forward question of copy-paste.

* Reduced build time & size for some third parties by disabling
  unecessary components likes tests and examples.
+ Added Debug/Relase build type switch to build.py

! Docker image for ConfigService has still not been fixed (missing
  MongoDB shared libraries)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(protobuf CONFIG REQUIRED)
 find_package(gRPC CONFIG REQUIRED)
 find_package(nlohmann_json REQUIRED)
 find_package(cpp-jwt REQUIRED)
+find_package (mongoc-1.0 CONFIG REQUIRED)
 find_package(mongocxx CONFIG REQUIRED)
 
 get_target_property(grpc_cpp_plugin_location gRPC::grpc_cpp_plugin LOCATION)
