Added UpdateConfig, Docker image to config.service
general:
* Moved all source files to ganymede/ folder to match namespace
  hierarchy
+ Added common library target
+ Added common/status.hh which provides shortcuts to generic gRPC error
  statuses
+ Docker images are now tagged with `PROJECT_VERSION` instead of
  `CMAKE_PROJECT_VERSION`. Each microservice should declare it's own
  project, otherwise the flexibility in per-service releases is lost.

third parties:
* Fixed some of build.py build parameters
+ Added paramater to build.py to control build type and install location

config.service:
+ Implemented UpdateConfig (turned out to be trivial, thanks Mongo)
+ Fixed Docker image. Now based (and built) on Alpine, with a much
  cleaner workflow. Note that as of this commit it still builds the
  project in DEBUG mode. Need to test and switch to Release mode.

--- a/ganymede/services/config/CMakeLists.txt
+++ b/ganymede/services/config/CMakeLists.txt
@@ -1,3 +1,8 @@
+project(ganymede.services.config VERSION 0.2.0)
+
+find_package(mongoc-1.0 CONFIG REQUIRED)
+find_package(mongocxx CONFIG REQUIRED)
+
 add_microservice(
     NAME config
     HEADERS
