--- a/ganymede/common/CMakeLists.txt
+++ b/ganymede/common/CMakeLists.txt
@@ -2,6 +2,13 @@ add_library(
     ganymede.common
     STATIC
     status.hh
+    auth/jwt.hh
 )
 
-target_link_libraries(ganymede.common gRPC::grpc gRPC::grpc++)
+target_link_libraries(
+    ganymede.common
+    PUBLIC
+    gRPC::grpc
+    gRPC::grpc++
+    cpp-jwt::cpp-jwt
+)
