--- a/ganymede/services/CMakeLists.txt
+++ b/ganymede/services/CMakeLists.txt
@@ -1,3 +1,11 @@
-add_subdirectory(config)
-add_subdirectory(measurements)
-add_subdirectory(device_management)
+if("service.config" IN_LIST GANYMEDE_SCOPE)
+    add_subdirectory(config)
+endif()
+
+if("service.measurements" IN_LIST GANYMEDE_SCOPE)
+    add_subdirectory(measurements)
+endif()
+
+if("service.device_management" IN_LIST GANYMEDE_SCOPE)
+    add_subdirectory(device_management)
+endif()
