--- a/ganymede/services/config/CMakeLists.txt
+++ b/ganymede/services/config/CMakeLists.txt
@@ -1,5 +1,10 @@
 project(ganymede.services.config VERSION 0.2.0)
 
+list(APPEND CMAKE_PREFIX_PATH
+    "${CMAKE_SOURCE_DIR}/third_party/mongo-c-driver/cmake/install"
+    "${CMAKE_SOURCE_DIR}/third_party/mongo-cxx-driver/cmake/install"
+)
+
 find_package(mongoc-1.0 CONFIG REQUIRED)
 find_package(mongocxx CONFIG REQUIRED)
 
