Breaking stuff and asking for forgiveness
+ Added primitive logging functions to common. Logging functions output
  in a Google Cloud compatible format (JSON with specific keys). It's
  currently header-only, which should be changed eventually.

* Merged `config-service` and `device-management-service` into
  `device-config-service`.
+ Added Device-related messages and RPCs to DeviceConfig service

+ Added postgres-cxx, this will be immediately removed in next commit

--- a/ganymede/services/CMakeLists.txt
+++ b/ganymede/services/CMakeLists.txt
@@ -1,11 +1,2 @@
-if("service.config" IN_LIST GANYMEDE_SCOPE)
-    add_subdirectory(config)
-endif()
-
-if("service.measurements" IN_LIST GANYMEDE_SCOPE)
-    add_subdirectory(measurements)
-endif()
-
-if("service.device_management" IN_LIST GANYMEDE_SCOPE)
-    add_subdirectory(device_management)
-endif()
+add_subdirectory(device_config)
+add_subdirectory(measurements)
