Added more validation to DeviceConfigService
device_config:
+ Added more input validation checks to DeviceConfigService, including a
  check on Config OID existing before Device add/update.
! TODO: The current validation checks are getting very repetitive and
  make the code base hard to read. Work NEEDS to be done on refactoring
  code to move validation into helper classes.
* Docker images are now built in Release mode.

common:
* Use nlohmann::json to ensure logging format is valid JSON (for Google
  Cloud Logging compat)
+ Added RFC 3339 time field to log output. Did you know C++20 outlines
  utc_clock and std::format() functions? But that neither G++ nor Clang
  support them yet? I'm sad. :(

third parties:
+ nlohmann::json added to global dependencies
- removed leftover key in build.py() options dict

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,14 @@ project(ganymede VERSION 0.1.0)
 list(APPEND CMAKE_PREFIX_PATH
     "${CMAKE_SOURCE_DIR}/third_party/grpc/cmake/install"
     "${CMAKE_SOURCE_DIR}/third_party/cpp-jwt/cmake/install"
+    "${CMAKE_SOURCE_DIR}/third_party/json/cmake/install"
 )
 
 find_package(Threads REQUIRED)
 find_package(protobuf CONFIG REQUIRED)
 find_package(gRPC CONFIG REQUIRED)
 find_package(cpp-jwt REQUIRED)
+find_package(nlohmann_json CONFIG REQUIRED)
 
 get_target_property(grpc_cpp_plugin_location gRPC::grpc_cpp_plugin LOCATION)
 
@@ -42,7 +44,7 @@ function(add_microservice)
     if("service.${ADD_MICROSERVICE_NAME}" IN_LIST GANYMEDE_SCOPE)
         add_executable(ganymede.services.${ADD_MICROSERVICE_NAME} ${ADD_MICROSERVICE_SOURCES} ${ADD_MICROSERVICE_HEADERS})
 
-        target_compile_features(ganymede.services.${ADD_MICROSERVICE_NAME} PUBLIC cxx_std_17)
+        target_compile_features(ganymede.services.${ADD_MICROSERVICE_NAME} PUBLIC cxx_std_20)
         target_compile_options(ganymede.services.${ADD_MICROSERVICE_NAME} PUBLIC -Wall -Werror -Wpedantic)
         target_include_directories(ganymede.services.${ADD_MICROSERVICE_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR}) # To include generated Protobuf/gRPC files
         target_link_libraries(ganymede.services.${ADD_MICROSERVICE_NAME} PUBLIC ganymede.services.${ADD_MICROSERVICE_NAME}.proto ganymede.common)
