--- a/ganymede/common/CMakeLists.txt
+++ b/ganymede/common/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(
     STATIC
     status.hh
     log.hh
+    log.cc
     auth/jwt.hh
 )
 
@@ -12,4 +13,7 @@ target_link_libraries(
     gRPC::grpc
     gRPC::grpc++
     cpp-jwt::cpp-jwt
+    nlohmann_json::nlohmann_json
 )
+
+target_compile_features(ganymede.common PUBLIC cxx_std_20)
