Added Measurements service
measurements:
* Bumped to version 0.1.1
+ Added Measurements service. Currently only has Push and Get requests.
! While the PushMeasurements code path is of acceptable quality, the Get
  path is downright awful, shoddy code. The InfluxDB::Query function is
  pretty much hardcoded for the query written in main.cc. Note that
  it could be worth it to invest in writing a InfluxDBv2 CXX client.
  Current C++ implementations only work with the v1 API.
! The Measurements service uses CPR (Curl for People) which has nice
  interfaces, but his annoying to integrate and seems to have random
  issues with certificates. It would be preferable to directly call
  cURL before releasing this code/deploying to an actual production
  environment.

device config:
* Bumped to version 0.2.9
* MongoDB is now linked statically. This enabled a significant decrease
  in image size. Yay!

common:
* Moved JWT functions body to source files. CMake was having issues
  adding `cpp-jwt`'s include paths... Including it only in
  `ganymede.common` made it easier to manage.

global:
+ Added measurements service to API-Gateway config.
* Fixed GANYMEDE_SCOPE not being considered correctly.

third parties:
* Made gRPC use system OpenSSL. This fixed the MongoDB issue!

--- a/api.yaml
+++ b/api.yaml
@@ -6,16 +6,15 @@ title: Ganymede gRPC API
 
 apis:
 - name: ganymede.services.device_config.DeviceConfigService
-# - name: ganymede.services.measurements.MeasurementsService
+- name: ganymede.services.measurements.MeasurementsService
 
 backend:
   rules:
     - selector: "ganymede.services.device_config.*"
       address: grpcs://ganymede-device-config-service-sjgdj4ediq-nn.a.run.app:443
 
-    # - selector: "ganymede.services.measurements.*"
-    #   address: grpcs://TBD:443 #TODO: Create service and get actual URL
-
+    - selector: "ganymede.services.measurements.*"
+      address: grpcs://ganymede-measurements-service-sjgdj4ediq-nn.a.run.app:443
 
 authentication:
   providers:
