--- a/ganymede/common/CMakeLists.txt
+++ b/ganymede/common/CMakeLists.txt
@@ -5,15 +5,8 @@ add_library(
     log.hh
     log.cc
     auth/jwt.hh
+    auth/jwt.cc
 )
 
-target_link_libraries(
-    ganymede.common
-    PUBLIC
-    gRPC::grpc
-    gRPC::grpc++
-    cpp-jwt::cpp-jwt
-    nlohmann_json::nlohmann_json
-)
-
-target_compile_features(ganymede.common PUBLIC cxx_std_20)
+target_link_libraries(ganymede.common PUBLIC cpp-jwt::cpp-jwt nlohmann_json::nlohmann_json gRPC::grpc gRPC::grpc++)
+target_compile_features(ganymede.common PUBLIC cxx_std_17)
