--- a/ganymede/services/measurements/CMakeLists.txt
+++ b/ganymede/services/measurements/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(ganymede.services.measurements VERSION 0.1.1)
+project(ganymede.services.measurements VERSION 0.1.2)
 
 add_microservice(
     NAME measurements
@@ -14,7 +14,7 @@ add_microservice(
 
 if ("service.measurements" IN_LIST GANYMEDE_SCOPE)
     include(FetchContent)
-    FetchContent_Declare(cpr GIT_REPOSITORY https://github.com/whoshuu/cpr.git GIT_TAG c8d33915dbd88ad6c92b258869b03aba06587ff9) # the commit hash for 1.5.0
+    FetchContent_Declare(cpr GIT_REPOSITORY https://github.com/whoshuu/cpr GIT_TAG aac5058a15e9ad5ad393973dc6fe44d7614a7f55) # the commit hash for 1.6.0
     set(BUILD_CPR_TESTS OFF)
     set(USE_SYSTEM_GTEST ON)
     FetchContent_MakeAvailable(cpr)
