--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,15 +2,19 @@ cmake_minimum_required(VERSION 3.16)
 project(ganymede VERSION 0.1.0)
 
 # Import third parties
-list(APPEND CMAKE_PREFIX_PATH
-    "${CMAKE_SOURCE_DIR}/build"
+SET (CMAKE_MODULE_PATH
+    "${CMAKE_SOURCE_DIR}/cmake/build"
+    "${CMAKE_MODULE_PATH}"
 )
+# list(APPEND CMAKE_PREFIX_PATH
+#     "${CMAKE_SOURCE_DIR}/cmake/build"
+# k)
 
 find_package(Threads REQUIRED)
 find_package(OpenSSL REQUIRED)
-find_package(protobuf CONFIG REQUIRED)
-find_package(gRPC CONFIG REQUIRED)
-find_package(cpp-jwt CONFIG REQUIRED)
+find_package(Protobuf REQUIRED)
+find_package(gRPC REQUIRED)
+find_package(cpp-jwt REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 
 get_target_property(grpc_cpp_plugin_location gRPC::grpc_cpp_plugin LOCATION)
