--- a/ganymede/services/device_config/CMakeLists.txt
+++ b/ganymede/services/device_config/CMakeLists.txt
@@ -12,12 +12,7 @@ add_microservice(
 )
 
 if("service.device_config" IN_LIST GANYMEDE_SCOPE)
-    list(APPEND CMAKE_PREFIX_PATH
-        "${CMAKE_SOURCE_DIR}/third_party/mongo-c-driver/cmake/install"
-        "${CMAKE_SOURCE_DIR}/third_party/mongo-cxx-driver/cmake/install"
-    )
-
-    find_package(mongoc-1.0 CONFIG REQUIRED)
-    find_package(mongocxx CONFIG REQUIRED)
+    find_package(mongoc-1.0 REQUIRED)
+    find_package(mongocxx REQUIRED)
     target_link_libraries(ganymede.services.device_config PUBLIC mongo::mongocxx_static mongo::mongoc_static)
 endif()
