--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.3.4
+        uses: actions/checkout@v3.3.0
         with:
           submodules: true
 
@@ -51,15 +51,16 @@ jobs:
 
       - name: Create MongoDB container
         run: |
-          docker pull mongo:focal
-          docker run -d -p 27017:27017/tcp mongo:focal
+          docker pull mongo:latest
+          docker run -d -p 27017:27017/tcp mongo:latest
+          sleep 10
 
       - name: Test
         working-directory: build
         run: ctest --rerun-failed --output-on-failure
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2.1.0
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -77,7 +78,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.3.4
+        uses: actions/checkout@v3.3.0
 
       - name: Run clang-format
         working-directory: src
