--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,9 @@ jobs:
 
       - name: Install Third Parties
         working-directory: build
+        env:
+          CC: gcc-11
+          CXX: g++-11
         run: conan install .. --update --build=missing -s compiler.version=11 -s compiler.libcxx=libstdc++11 -s build_type=Release -r davidbourgault
 
       - name: Configure
@@ -37,4 +40,7 @@ jobs:
 
       - name: Build
         working-directory: build
+        env:
+          CC: gcc-11
+          CXX: g++-11
         run: cmake --build . --config Release --parallel 2
