--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libs/influx"]
 	path = libs/influx
-	url = git@github.com/ngc7293:influx-cpp.git
+	url = git@github.com:ngc7293/influx.git
