--- a/ganymede/common/CMakeLists.txt
+++ b/ganymede/common/CMakeLists.txt
@@ -8,5 +8,5 @@ add_library(
     auth/jwt.cc
 )
 
-target_link_libraries(ganymede.common PUBLIC cpp-jwt::cpp-jwt nlohmann_json::nlohmann_json gRPC::grpc gRPC::grpc++)
-target_compile_features(ganymede.common PUBLIC cxx_std_17)
+target_link_libraries(ganymede.common PUBLIC CONAN_PKG::cpp-jwt CONAN_PKG::nlohmann_json CONAN_PKG::grpc)
+target_compile_features(ganymede.common PUBLIC cxx_std_20)
