--- a/ganymede/services/device_config/CMakeLists.txt
+++ b/ganymede/services/device_config/CMakeLists.txt
@@ -4,11 +4,12 @@ add_microservice(
     NAME
         device_config
     HEADERS
+        bson_serde.hh
     SOURCES
-        src/main.cc
+        main.cc
     PROTO
         device_config.proto
         device_config.service_config.proto
 )
 
-target_link_libraries(ganymede.services.device_config PUBLIC mongo::mongocxx_static mongo::mongoc_static)
+target_link_libraries(ganymede.services.device_config PUBLIC CONAN_PKG::mongo-cxx-driver CONAN_PKG::mongo-c-driver)
