--- a/ganymede/services/measurements/CMakeLists.txt
+++ b/ganymede/services/measurements/CMakeLists.txt
@@ -3,13 +3,11 @@ project(ganymede.services.measurements VERSION 0.1.2)
 add_microservice(
     NAME measurements
     HEADERS
-        src/influxdb.hh
     SOURCES
-        src/main.cc
-        src/influxdb.cc
+        main.cc
     PROTO
         measurements.proto
         measurements.service_config.proto
 )
 
-target_link_libraries(ganymede.services.measurements PUBLIC cpr::cpr)
+target_link_libraries(ganymede.services.measurements)
