--- a/ganymede/services/measurements/Dockerfile
+++ b/ganymede/services/measurements/Dockerfile
@@ -1,26 +1,19 @@
-FROM ubuntu:focal AS base
-
-ENV DEBIAN_FRONTEND noninteractive
-
-RUN apt-get update
-RUN apt-get install g++ cmake ninja-build python3 python3-pip -y
-RUN pip install conan
-
-FROM base AS build
+FROM ghcr.io/ngc7293/cxxci:latest AS build
 
 # Third parties
 ENV CONAN_USER_HOME=/var/build/
 COPY conanfile.txt  /var/build/
-WORKDIR /var/build/cmake/conan
-RUN conan install ../.. -s compiler.libcxx=libstdc++11 -s cppstd=17 -s build_type=Release
+WORKDIR /var/build/build
+RUN conan install .. -s compiler.libcxx=libstdc++11 -s cppstd=20 -s build_type=Release
 
 # Copy project source
 COPY CMakeLists.txt /var/build/
+COPY libs           /var/build/libs
 COPY ganymede       /var/build/ganymede
 
 # Build project
-WORKDIR /var/build/cmake/build
-RUN cmake -G Ninja -DCMAKE_BUILD_TYPE=Release ../..
+WORKDIR /var/build/build
+RUN cmake -G Ninja -DCMAKE_BUILD_TYPE=Release ..
 RUN ninja ganymede.services.measurements
 
 FROM ubuntu:latest AS runtime
@@ -28,7 +21,7 @@ FROM ubuntu:latest AS runtime
 RUN apt-get update
 RUN apt-get -y install ca-certificates
 
-COPY --from=build /var/build/cmake/build/bin/ /opt/bin/
+COPY --from=build /var/build/build/bin/ /opt/bin/
 COPY ganymede/services/measurements/measurements.service_config.json /opt/var/
 
 ENV PORT=3000
