--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,78 +3,28 @@ name: Build
 on: push
 
 jobs:
-  validate-style:
+  build-test:
     runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3.3.0
 
-      - name: Run clang-format
-        working-directory: src
-        run: find -name "*.cc" -or -name "*.hh" | xargs clang-format --dry-run --style=file -Werror
+      - name: Install protoc
+        run: sudo apt-get install protobuf-compiler
 
-  build-local:
-    needs: validate-style
-
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3.3.0
-        with:
-          submodules: true
-
-      - name: Install tools
-        run: sudo apt-get install g++-12 gcc-12 ninja-build
-
-      - name: Configure Conan
-        run: |
-          pip install conan
-          conan config set general.revisions_enabled=1
-          conan remote add davidbourgault https://artifactory.davidbourgault.ca/artifactory/api/conan/conan
-          conan user -p ${{ secrets.CONAN_PASSWORD }} -r davidbourgault david
-
-      - name: Create directories
-        run: mkdir build
-
-      - name: Install Third Parties
-        working-directory: build
-        env:
-          CC: gcc-12
-          CXX: g++-12
-        run: conan install .. --update --build=missing --settings compiler.version=12 --settings compiler.libcxx=libstdc++11 --settings build_type=Release --remote=davidbourgault
-
-      - name: Upload
-        run: conan upload '*' --remote davidbourgault --all --confirm
-
-      - name: Configure
-        working-directory: build
-        env:
-          CC: gcc-12
-          CXX: g++-12
-        run: cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr
-
-      - name: Build
-        working-directory: build
-        env:
-          CC: gcc-12
-          CXX: g++-12
-        run: cmake --build . --config Release --parallel 2
-
-      - name: Create MongoDB container
-        run: |
-          docker pull mongo:latest
-          docker run -d -p 27017:27017/tcp mongo:latest
-          sleep 10
+      - name: Launch Database for testing
+        run: docker compose up database --detach
 
       - name: Test
-        working-directory: build
-        run: ctest --rerun-failed --output-on-failure
+        env:
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/ganymede
+        run: cargo test
 
   build-docker:
     runs-on: ubuntu-22.04
 
-    needs: build-local
+    needs: build-test
     steps:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2.1.0
@@ -85,35 +35,14 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v3.3.0
-        with:
-          submodules: true
 
-      - name: Install tools
-        run: sudo apt-get install g++-12 gcc-12
+      - name: Build image
+        run: docker build . -t ghcr.io/ngc7293/ganymede:latest
 
-      - name: Configure Conan
-        run: |
-          pip install conan
-          conan config set general.revisions_enabled=1
-          conan remote add davidbourgault https://artifactory.davidbourgault.ca/artifactory/api/conan/conan
-          conan user -p ${{ secrets.CONAN_PASSWORD }} -r davidbourgault david
+      - name: Push latest (from develop)
+        if: ${{ github.ref == 'refs/heads/develop' }}
+        run: docker push --all-tags ghcr.io/ngc7293/ganymede:latest
 
-      - name: Create directories
-        run: mkdir build
-
-      - name: Install Third Parties
-        working-directory: build
-
-        run: conan install .. --update --build=never --settings compiler.version=12 --settings compiler.libcxx=libstdc++11 --settings build_type=Release --remote=davidbourgault
-
-      - name: Build Docker image
-        working-directory: build
-        env:
-          CC: gcc-12
-          CXX: g++-12
-        run: |
-          cmake ..
-          cmake --build . --target ganymede.services.device.docker
-
-      - name: Push
-        run: docker push --all-tags ghcr.io/ngc7293/ganymede/device.service
+      - name: Push stable (from main)
+        if: ${{ github.ref == 'refs/heads/main' }}
+        run: docker push --all-tags ghcr.io/ngc7293/ganymede:stable
