--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,21 +3,32 @@ name: Build
 on: push
 
 jobs:
-  build:
+  validate-style:
     runs-on: ubuntu-22.04
 
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3.3.0
+
+      - name: Run clang-format
+        working-directory: src
+        run: find -name "*.cc" -or -name "*.hh" | xargs clang-format --dry-run --style=file -Werror
+
+  build-local:
+    needs: validate-style
+
+    container:
+      image: ghcr.io/ngc7293/cxxci:jammy
+
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v3.3.0
         with:
           submodules: true
 
-      - name: Install tools
-        run: sudo apt-get install g++-12 gcc-12 ninja-build
-
       - name: Install Conan
         run: |
-          pip install conan
           conan config set general.revisions_enabled=1
           conan remote add davidbourgault https://artifactory.davidbourgault.ca/artifactory/api/conan/conan
           conan user -p ${{ secrets.CONAN_PASSWORD }} -r davidbourgault david
@@ -59,6 +70,11 @@ jobs:
         working-directory: build
         run: ctest --rerun-failed --output-on-failure
 
+  build-docker:
+    runs-on: ubuntu-22.04
+
+    needs: build-local
+    steps:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2.1.0
         with:
@@ -66,20 +82,14 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Checkout
+        uses: actions/checkout@v3.3.0
+        with:
+          submodules: true
+
       - name: Build Docker image
         working-directory: build
         run: cmake --build . --target ganymede.services.device.docker
 
       - name: Push
         run: docker push --all-tags ghcr.io/ngc7293/ganymede/device.service
-
-  validate-style:
-    runs-on: ubuntu-20.04
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3.3.0
-
-      - name: Run clang-format
-        working-directory: src
-        run: find -name "*.cc" -or -name "*.hh" | xargs clang-format --dry-run --style=file -Werror
