Adds tests for device.service, adds AuthValidator
- Integration tests for device.service
- AuthValidator injected into services, allows for mocks in testing
- Reviewed layout of light configuration

--- a/src/ganymede/auth/CMakeLists.txt
+++ b/src/ganymede/auth/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(ganymede.auth STATIC
-    jwt.cc
-    jwt.hh
+    auth_validator.cc
+    auth_validator.hh
 )
 
 target_link_libraries(ganymede.auth
