Map Protobuf "uid" fields to mongo "_id"
* Map Protobuf "uid" fields to Mongo's OID when converting BSON to
  Protobuf Message.
* Auto conversion from Result<T> to Result<void>
* Use latest in Kubernetes deployment

--- a/kubernetes/device.yaml
+++ b/kubernetes/device.yaml
@@ -32,7 +32,7 @@ spec:
     spec:
       containers:
       - name: device
-        image: ghcr.io/ngc7293/ganymede/device.service:0.3.4
+        image: ghcr.io/ngc7293/ganymede/device.service:latest
         ports:
           - containerPort: 3000
         resources:
