--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,9 +51,20 @@ jobs:
 
       - name: Create MongoDB container
         run: |
-          docker pull mongodb:focal
+          docker pull mongo:focal
           docker run mongo:focal
 
       - name: Test
         working-directory: build
         run: ctest --rerun-failed --output-on-failure
+
+  validate-style:
+    runs-on: ubuntu-20.04
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.3.4
+
+      - name: Run clang-format
+        working-directory: src
+        run: find -name "*.cc" -or -name "*.hh" | xargs clang-format --dry-run --style=file -Werror
